--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                         <div class="ikon">
                             <img src="fe.png" alt="Web Icon">
                         </div>
-                        <h5>Frontend Web Developer</h5>
+                        <h5>Frontend Developer</h5>
                         <div class="pra">
                             <p>Code and design the user interface for websites.</p>
                             <p style="text-align: center;"></p>
