--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                     <div class="about-text">
                         <h1>ABOUT ME</h1>
                         <div class="line"></div>
-                        <p>An undergraduate student at Gunadarma University majoring in Informatics with a high enthusiasm for learning and interest in the UI/UX design and front-end web developer.</p>
+                        <p>An undergraduate student at Gunadarma University majoring in Informatics with a high enthusiasm for learning and interest in the UI/UX design and front-end developer.</p>
                     </div>
                     <div class="about-image">
                         <img src="foto.png" alt="Your Image">
